[project]
name = "backlink-mcp"
version = "0.1.0"
description = "Free backlink discovery MCP server using DuckDuckGo, Wayback Machine, and web scraping"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "duckduckgo-search>=6.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
backlink-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
