[project]
name = "backlink-mcp"
version = "0.1.1"
description = "Free backlink discovery MCP server using DuckDuckGo, Wayback Machine, and web scraping"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.urls]
Homepage = "https://www.sellonllm.com/backlink-mcp.html"
Repository = "https://github.com/vipul510-web/mcp-backlink-for-seo"
"Bug Tracker" = "https://github.com/vipul510-web/mcp-backlink-for-seo/issues"
dependencies = [
    "mcp[cli]>=1.0.0",
    "ddgs>=9.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
backlink-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
